Fix bootstrap issues. Make the edit icon clickable too, but retain black color.

--- a/css/color.css
+++ b/css/color.css
@@ -1,3 +1,7 @@
+a > .fa {
+    color: #000;
+}
+
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
     color: #fff;
     background-color: #da223a
