--- a/css/color.css
+++ b/css/color.css
@@ -25,7 +25,7 @@
     background-image: -webkit-linear-gradient(#000000, #000000 60%, #000000);
     background-image: linear-gradient(#000000, #000000 60%, #000000);
     background-repeat: no-repeat;
-    border-bottom: 1px solid #da223a;
+    border-bottom: 1px solid #fff;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff000000', endColorstr='#ff000000', GradientType=0);
     filter: none;
     -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
